add navigation section

--- a/index.html
+++ b/index.html
@@ -4,10 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Fernando Torres UX/UI Desig</title>
 </head>
 <body>
-    
+
+    <main>
+
+        <section class="navigation">
+            <div class="container">
+                <nav class="main-navigation">
+                    <a href="#"><img src="https://place-hold.it/140x40/fff/fff" alt=""></a>
+                    <ul class="main-navigation-container">
+                        <li><a href="#">Work</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </section>
+
+        <section class="profile">
+            <div class="container">
+
+                <div class="profile-container">
+                    <div class="profile-picture">
+                        <img src="https://place-hold.it/700x700" alt="">
+                    </div>
+
+                    <div class="profile-description">
+                        <h1>Hi! I'm <span>Fernando</span></h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis recusandae cupiditate aperiam mollitia accusantium asperiores assumenda, laborum velit ea neque cum suscipit dolorum ex fugit vero quia corrupti dolorem laboriosam!</p>
+                    </div>
+                </div>
+                
+            </div>
+        </section>
+
+
+    </main>
 
 </body>
 </html>
