--- a/index.html
+++ b/index.html
@@ -26,18 +26,25 @@
 
         <section class="profile">
             <div class="container">
-
                 <div class="profile-container">
                     <div class="profile-picture">
-                        <img src="https://place-hold.it/700x700" alt="">
+                        <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/325/technologist-light-skin-tone_1f9d1-1f3fb-200d-1f4bb.png" alt="">
                     </div>
 
                     <div class="profile-description">
                         <h1>Hi! I'm <span>Fernando</span></h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis recusandae cupiditate aperiam mollitia accusantium asperiores assumenda, laborum velit ea neque cum suscipit dolorum ex fugit vero quia corrupti dolorem laboriosam!</p>
+                        <h2>Reiciendis recusandae cupiditate aperiam mollitia accusantium asperiores assumenda, laborum velit ea neque cum suscipit dolorum ex fugit vero quia corrupti dolorem laboriosam!</h2>
                     </div>
                 </div>
-                
+            </div>
+        </section>
+
+        <section class="works">
+            <div class="container">
+                <div class="section-title">
+                    <h1>Works</h1>
+                    <p>Earum ratione sapiente fugit, sequi quo aut provident blanditiis voluptatum quasi commodi amet, nobis similique vel reiciendis cum architecto iure ad officia?</p>
+                </div>
             </div>
         </section>
 
