fix padding box-sizing

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Fernando Torres UX/UI Desig</title>
+    <title>Fernando Torres UX/UI Designer</title>
 </head>
 <body>
 
@@ -14,7 +14,7 @@
         <section class="navigation">
             <div class="container">
                 <nav class="main-navigation">
-                    <a href="#"><img src="https://place-hold.it/140x40/fff/fff" alt=""></a>
+                    <a href="#" class="logo"><img src="https://place-hold.it/140x40/fff/fff" alt=""></a>
                     <ul class="main-navigation-container">
                         <li><a href="#">Work</a></li>
                         <li><a href="#">About</a></li>
@@ -27,14 +27,16 @@
         <section class="profile">
             <div class="container">
                 <div class="profile-container">
-                    <div class="profile-picture">
-                        <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/325/technologist-light-skin-tone_1f9d1-1f3fb-200d-1f4bb.png" alt="">
-                    </div>
 
                     <div class="profile-description">
                         <h1>Hi! I'm <span>Fernando</span></h1>
                         <h2>Reiciendis recusandae cupiditate aperiam mollitia accusantium asperiores assumenda, laborum velit ea neque cum suscipit dolorum ex fugit vero quia corrupti dolorem laboriosam!</h2>
                     </div>
+
+                    <div class="profile-picture">
+                        <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/325/technologist-light-skin-tone_1f9d1-1f3fb-200d-1f4bb.png" alt="">
+                    </div>
+
                 </div>
             </div>
         </section>
@@ -44,6 +46,30 @@
                 <div class="section-title">
                     <h1>Works</h1>
                     <p>Earum ratione sapiente fugit, sequi quo aut provident blanditiis voluptatum quasi commodi amet, nobis similique vel reiciendis cum architecto iure ad officia?</p>
+                </div>
+                
+                <div class="projects-container">
+                    <article class="projects-item">
+                        <div class="project-item-container">
+                            <h1 class="project-title"></h1>
+                            <p class="project-description"></p>
+                            <a href="" class="project-item-cta"></a>
+                        </div>
+                    </article>
+                    <article class="projects-item">
+                        <div class="project-item-container">
+                            <h1 class="project-title"></h1>
+                            <p class="project-description"></p>
+                            <a href="" class="project-item-cta"></a>
+                        </div>
+                    </article>
+                    <article class="projects-item">
+                        <div class="project-item-container">
+                            <h1 class="project-title"></h1>
+                            <p class="project-description"></p>
+                            <a href="" class="project-item-cta"></a>
+                        </div>
+                    </article>
                 </div>
             </div>
         </section>
