fixing some hovers on projects section or adding more bugs

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <nav class="main-navigation">
                     <a href="#" class="logo"><img src="https://place-hold.it/140x40/fff/fff" alt=""></a>
                     <ul class="main-navigation-container">
-                        <li><a href="#">Work</a></li>
                         <li><a href="#">About</a></li>
+                        <li><a href="#">Work</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
@@ -29,7 +29,7 @@
                 <div class="profile-container">
 
                     <div class="profile-description">
-                        <h1>Hi! I'm <span>Fernando</span></h1>
+                        <h1>Hi! 👋 I'm <span>Fernando</span></h1>
                         <h2>Reiciendis recusandae cupiditate aperiam mollitia accusantium asperiores assumenda, laborum velit ea neque cum suscipit dolorum ex fugit vero quia corrupti dolorem laboriosam!</h2>
                     </div>
 
@@ -50,28 +50,46 @@
                 
                 <div class="projects-container">
                     <article class="projects-item">
-                        <div class="project-item-container">
-                            <h1 class="project-title"></h1>
-                            <p class="project-description"></p>
-                            <a href="" class="project-item-cta"></a>
-                        </div>
-                    </article>
-                    <article class="projects-item">
-                        <div class="project-item-container">
-                            <h1 class="project-title"></h1>
-                            <p class="project-description"></p>
-                            <a href="" class="project-item-cta"></a>
-                        </div>
-                    </article>
-                    <article class="projects-item">
-                        <div class="project-item-container">
-                            <h1 class="project-title"></h1>
-                            <p class="project-description"></p>
-                            <a href="" class="project-item-cta"></a>
-                        </div>
+                        <a href="#" class="project-item-container">
+                            <div class="project-text">
+                                <h1 class="project-title">Expedita autem asperiores</h1>
+                                <p class="project-description">Dolores libero iusto cupiditate facilis optio exercitationem laudantium.</p>
+                                <span class="project-item-cta">View project</span>
+                            </div>
+                            <div class="project-image-container">
+                                <img src="https://place-hold.it/800x500" alt="">
+                            </div>
+                        </a>
                     </article>
                 </div>
             </div>
+        </section>
+
+        
+
+        <section class="navigation-mobile">
+            <nav>
+                <ul class="bottom-navigation">
+                    <li>
+                        <a href="#">
+                            <img src="https://place-hold.it/30x30/eaeaea/eaeaea" alt="">
+                            <span>About</span> 
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="https://place-hold.it/30x30/eaeaea/eaeaea" alt="">
+                            <span>Work</span> 
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="https://place-hold.it/30x30/eaeaea/eaeaea" alt="">
+                            <span>Contact</span> 
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </section>
 
 
