--- a/index.html
+++ b/index.html
@@ -53,27 +53,18 @@
                 <div class="project-image-container"><img src="https://place-hold.it/800x500" alt=""></div></a></article>
           </div>
         </div>
-      </section><section class="navigation-mobile">
-<nav>
-<ul class="bottom-navigation">
-<li>
-<a href="#">
-<img src="https://place-hold.it/30x30/eaeaea/eaeaea" alt="">
-</a>
-</li>
-<li>
-<a href="#">
-<img src="https://place-hold.it/30x30/eaeaea/eaeaea" alt="">
-</a>
-</li>
-<li>
-<a href="#">
-<img src="https://place-hold.it/30x30/eaeaea/eaeaea" alt="">
-</a>
-</li>
-</ul>
-</nav>
-</section>
+      </section>
+      
+      
+      <section class="navigation-mobile">
+        <nav>
+          <ul class="bottom-navigation">
+            <li><a href=""><img src="https://place-hold.it/30x30/eaeaea/eaeaea" alt=""></a></li>
+            <li><a href=""><img src="https://place-hold.it/30x30/eaeaea/eaeaea" alt=""></a></li>
+            <li><a href=""><img src="https://place-hold.it/30x30/eaeaea/eaeaea" alt=""></a></li>
+          </ul>
+        </nav>
+      </section>
     </main>
   </body>
 </html>
