Adjustments in header background

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="container">
           <div class="profile-container">
             <div class="profile-description">
-              <h1>Hi! 👋 I'm <span>Fernando</span></h1>
-              <h2>Reiciendis recusandae cupiditate aperiam mollitia accusantium asperiores assumenda, laborum velit ea neque cum suscipit dolorum ex fugit vero quia corrupti dolorem laboriosam!</h2>
+              <h1>Hola 👋 soy <span>Fernando</span></h1>
+              <h2>Diseñador Gráfico con años 10+ de experiencia liderando equipos multidisciplinarios, definiendo estrategias de diseño centradas en el usuario y optimizando experiencias digitales para mejorar la conversión y satisfacción del cliente.</h2>
             </div>
             
             <div class="profile-picture"><img src="https://s3.amazonaws.com/pix.iemoji.com/images/emoji/apple/ios-12/256/man-technologist-light-skin-tone.png" alt=""></div>
