Add some styles and fix header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
           <nav class="main-navigation"><a class="logo" href=""><img src="https://place-hold.it/140x40/fff/fff" alt=""></a>
             <ul class="main-navigation-container">
-              <li><a href="#">About</a></li>
+              <li><a href="#">About Me</a></li>
               <li><a href="#">Work</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
@@ -28,7 +28,7 @@
         <div class="container">
           <div class="profile-container">
             <div class="profile-description">
-              <h1>Hola 👋 soy <span>Fernando</span></h1>
+              <h1>👋 Hola soy <span>Fernando</span></h1>
               <h2>Diseñador Gráfico con años 10+ de experiencia liderando equipos multidisciplinarios, definiendo estrategias de diseño centradas en el usuario y optimizando experiencias digitales para mejorar la conversión y satisfacción del cliente.</h2>
             </div>
             
@@ -47,7 +47,7 @@
           <div class="projects-container">
             <article class="projects-item"><a class="project-item-container" href="#"> 
                 <div class="project-text">
-                  <h1 class="project-title">Expedita autem asperiores</h1>
+                  <h1 class="project-title">Farmacias Benavides</h1>
                   <p class="project-description">Dolores libero iusto cupiditate facilis optio exercitationem laudantium.</p><span class="project-item-cta">View project</span>
                 </div>
                 <div class="project-image-container"><img src="https://place-hold.it/800x400" alt=""></div></a></article>
@@ -59,9 +59,12 @@
       <section class="navigation-mobile">
         <nav>
           <ul class="bottom-navigation">
-            <li><a href=""><img src="https://place-hold.it/30x30/eaeaea/eaeaea" alt=""></a></li>
-            <li><a href=""><img src="https://place-hold.it/30x30/eaeaea/eaeaea" alt=""></a></li>
-            <li><a href=""><img src="https://place-hold.it/30x30/eaeaea/eaeaea" alt=""></a></li>
+            <li><a href="">
+                <p>🙋🏻‍♂️<span>About Me</span></p></a></li>
+            <li><a href="">
+                <p>💻<span>Work</span></p></a></li>
+            <li><a href="">
+                <p>✉️<span>Contact</span></p></a></li>
           </ul>
         </nav>
       </section>
