Added some styles to project description

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class="container">
           <nav class="main-navigation"><a class="logo" href=""><img src="https://place-hold.it/140x40/fff/fff" alt=""></a>
             <ul class="main-navigation-container">
-              <li><a href="#">About Me</a></li>
-              <li><a href="#">Work</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="#">Acerca de mi</a></li>
+              <li><a href="#">Proyectos</a></li>
+              <li><a href="#">Contáctame</a></li>
             </ul>
           </nav>
         </div>
@@ -42,13 +42,13 @@
         <div class="container">
           <div class="section-title">
             <h1>Works</h1>
-            <p>Earum ratione sapiente fugit, sequi quo aut provident blanditiis voluptatum quasi commodi amet, nobis similique vel reiciendis cum architecto iure ad officia?</p>
+            <p>Dolor reprehenderit nam cumque, in id deleniti tempora soluta necessitatibus vitae eveniet eum quas consequuntur odit nulla, quo porro inventore! Corrupti, consequuntur!</p>
           </div>
           <div class="projects-container">
             <article class="projects-item"><a class="project-item-container" href="#"> 
                 <div class="project-text">
                   <h1 class="project-title">Farmacias Benavides</h1>
-                  <p class="project-description">Dolores libero iusto cupiditate facilis optio exercitationem laudantium.</p><span class="project-item-cta">View project</span>
+                  <p class="project-description">Creación de la experiencia de usuario para la app de Farmacias Benavides.</p><span class="project-item-cta">Ver proyecto</span>
                 </div>
                 <div class="project-image-container"><img src="https://place-hold.it/800x400" alt=""></div></a></article>
           </div>
@@ -60,11 +60,11 @@
         <nav>
           <ul class="bottom-navigation">
             <li><a href="">
-                <p>🙋🏻‍♂️<span>About Me</span></p></a></li>
+                <p>🙋🏻‍♂️<span>Acerca de mi</span></p></a></li>
             <li><a href="">
-                <p>💻<span>Work</span></p></a></li>
+                <p>💻<span>Proyectos</span></p></a></li>
             <li><a href="">
-                <p>✉️<span>Contact</span></p></a></li>
+                <p>✉️<span>Contáctame</span></p></a></li>
           </ul>
         </nav>
       </section>
