Clear some styles in projects section

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
       <section class="works">
         <div class="container">
           <div class="section-title">
-            <h1>Works</h1>
-            <p>Dolor reprehenderit nam cumque, in id deleniti tempora soluta necessitatibus vitae eveniet eum quas consequuntur odit nulla, quo porro inventore! Corrupti, consequuntur!</p>
+            <h3>Proyectos</h3>
+            <p>He participado en diferentes proyectos tanto de diseño como de gestión y desarrollo, trabajando de la mano con diferentes areas.</p>
           </div>
           <div class="projects-container">
             <article class="projects-item"><a class="project-item-container" href="#"> 
                 <div class="project-text">
                   <h1 class="project-title">Farmacias Benavides</h1>
-                  <p class="project-description">Creación de la experiencia de usuario para la app de Farmacias Benavides.</p><span class="project-item-cta">Ver proyecto</span>
+                  <p class="project-description">Diseño de experiencia de usuario para la app de Farmacias Benavides.</p><span class="project-item-cta">Ver proyecto</span>
                 </div>
                 <div class="project-image-container"><img src="https://place-hold.it/800x400" alt=""></div></a></article>
           </div>
