Added logo and name

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
       <section class="navigation">
         <div class="container">
-          <nav class="main-navigation"><a class="logo" href=""><img src="images/logo-ft.svg" alt=""></a>
+          <nav class="main-navigation"><a class="logo" href=""><img src="images/logo-ft.svg" alt=""><span>Fernando Torres</span></a>
             <ul class="main-navigation-container">
               <li><a href="#">Acerca de mi</a></li>
               <li><a href="#">Proyectos</a></li>
