--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <main>
       <section class="navigation">
         <div class="container">
-          <nav class="main-navigation"><a class="logo" href=""><img src="images/logo-ft.svg" alt=""><span>Fernando Torres</span></a>
+          <nav class="main-navigation"><a class="logo" href="index.html"><img src="images/logo-ft.svg" alt=""><span>Fernando Torres</span></a>
             <ul class="main-navigation-container">
-              <li><a href="#">Acerca de mi</a></li>
+              <li><a href="about.html">Acerca de mi</a></li>
               <li><a href="#">Proyectos</a></li>
               <li><a href="#">Contáctame</a></li>
             </ul>
